# cftun

./: CHANGELOG.md  Cargo.toml  README.md  cliff.toml  install.sh  justfile
.github/workflows/: release.yml
npm/: README.md  bin.js  install.js  package.json
scripts/: tag_and_release.sh
src/: main.rs
