[package]
name = "cftun"
version = "0.1.0"
edition = "2024"
description = "A tiny Rust CLI that turns Cloudflare Tunnel into a free, persistent ngrok alternative for webhooks."
license = "MIT"
repository = "https://github.com/blankeos/cftun"
homepage = "https://github.com/blankeos/cftun"
readme = "README.md"
keywords = ["cloudflare", "cloudflared", "tunnel", "webhooks", "cli"]
categories = ["command-line-utilities", "development-tools"]
authors = ["Carlo Taleon"]

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
ctrlc = "3"
cliclack = "0.5"
colored = "2"
dirs = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
which = "6"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
